Source/WebKit2/WebProcess/Network/WebResourceLoader.cpp
@@ -207,10 +207,7 @@ void WebResourceLoader::didReceiveResource(const ShareableResource::Handle& hand
 #if USE(PROTECTION_SPACE_AUTH_CALLBACK)
 void WebResourceLoader::canAuthenticateAgainstProtectionSpace(const ProtectionSpace& protectionSpace)
 {
-    if (!m_coreLoader)
-        return;
-
-    bool result = m_coreLoader->canAuthenticateAgainstProtectionSpace(protectionSpace);
+    bool result = m_coreLoader ? m_coreLoader->canAuthenticateAgainstProtectionSpace(protectionSpace) : false;
 
     send(Messages::NetworkResourceLoader::ContinueCanAuthenticateAgainstProtectionSpace(result));
 }
